# zeus

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  history.db  history.txt
sanbox/: auth.rs  repl.rs  sockets.rs  websockets.rs
src/: main.rs
src/commands/: auth.rs  chat.rs  config.rs  mod.rs
src/config/: database.rs
src/modules/: api_response.rs  mod.rs  repl.rs  shell.rs
src/shell/: mod.rs
