[package]
name = "zeus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.20", features = ["derive"] }
rustyline = "10.0.0"
serde = { version = "1.0.144", features = ["derive"] }
