[package]
name = "zeus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.15"
bcrypt = "0.13.0"
clap = { version = "3.2.20", features = ["derive"] }
console = "0.15.1"
dialoguer = "0.10.2"
dotenv = "0.15.0"
futures = "0.3.24"
jsonwebtoken = "8.1.1"
mongodb = "2.3.0"
reqwest = { version = "0.11.11", features = ["json"] }
rustyline = "10.0.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.0", features = ["full"] }
